# cardinal

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  book.toml  rustfmt.toml
.github/workflows/: frontend-ci.yml  rust-ci.yml
cardinal/: .gitignore  README.md  package-lock.json  package.json
cardinal-harmony/AppScope/: app.json5
cardinal-harmony/AppScope/resources/base/element/: string.json
cardinal-harmony/entry/: build-profile.json5  oh-package.json5
cardinal-harmony/entry/libs/: oh-package.json5
cardinal-harmony/entry/src/main/: module.json5
cardinal-harmony/entry/src/main/cpp/: CMakeLists.txt  main.cpp
cardinal-harmony/entry/src/main/ets/entryability/: EntryAbility.ets
cardinal-harmony/entry/src/main/ets/pages/: EventRow.ets  EventsTab.ets  FilesTab.ets  Index.ets  ResultRow.ets  SearchBar.ets
cardinal-harmony/entry/src/main/ets/types/: AppStateManager.ets  SearchState.ets  ffiInterface.ets
cardinal-harmony/entry/src/main/resources/base/element/: color.json  string.json
cardinal-harmony/entry/src/ohosTest/: module.json5
cardinal-qt/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
cardinal-qt/src/: cxxqt_object.rs  lib.rs  main.cpp
cardinal-sdk/: Cargo.toml
cardinal-sdk/examples/: fs_visit.rs  search.rs
cardinal-sdk/src/: consts.rs  database.rs  disk_entry.rs  event_flag.rs  event_stream.rs  fs_visitor.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
cardinal-sdk/src/fsevent/: event_flag.rs  event_id.rs  event_stream.rs  mod.rs
cardinal-sdk/src/linux/: event.rs  event_flag.rs  event_stream.rs  mod.rs  utils.rs
cardinal-syntax/src/: lib.rs
cardinal-syntax/tests/: argument_classification.rs  boolean.rs  filters.rs  groups.rs  optimizer_and.rs  optimizer_arguments.rs  optimizer_filters_mix.rs  optimizer_groups.rs  optimizer_metadata_tail.rs  optimizer_not.rs  optimizer_or.rs  optimizer_parse_matrix.rs  optimizer_paths_custom.rs  optimizer_spacing.rs  phrases_and_words.rs  stress_cases.rs
cardinal/src/: App.css  App.jsx  App.tsx  index.js  lib.rs  main.tsx  menu.ts  processor.rs  tray.ts
cardinal/src-tauri/: Cargo.toml  tauri.conf.json
cardinal/src-tauri/capabilities/: default.json
cardinal/src-tauri/src/: background.rs  commands.rs  lib.rs  linux_preview.rs  main.rs  quicklook.rs  search_activity.rs  window_controls.rs
cardinal/src/components/: ColumnHeader.jsx  ColumnHeader.tsx  FSEventsPanel.tsx  FileRow.jsx  FileRow.tsx  FileRowRenderer.tsx  FilesTabContent.tsx  LanguageSwitcher.tsx  MiddleEllipsisHighlight.jsx  PreferencesOverlay.tsx  SearchBar.tsx  StateDisplay.tsx  StatusBar.css  StatusBar.tsx  ThemeSwitcher.tsx  VirtualList.jsx  VirtualList.tsx
cardinal/src/components/__tests__/: PreferencesOverlay.test.tsx
cardinal/src/constants/: index.js
cardinal/src/database/: mod.rs
cardinal/src/database/tests/: db.rs
cardinal/src/fs_entry/: mod.rs  tests.rs
cardinal/src/hooks/: index.js  index.ts  useColumnResize.js  useContextMenu.js  useContextMenu.ts  useDataLoader.ts  useFileSearch.ts  useIconViewport.ts  useIgnorePaths.ts  useQuickLook.ts  useRemoteSort.ts  useRowData.js  useScrollbarSync.js  useSearchHistory.ts  useSelection.ts  useStableEvent.ts  useUnifiedContextMenu.js  useWatchRoot.ts
cardinal/src/hooks/__tests__/: useContextMenu.test.tsx  useIgnorePaths.test.ts  useSearchHistory.test.ts  useSelection.test.ts  useWatchRoot.test.ts
cardinal/src/i18n/: config.ts
cardinal/src/i18n/resources/: ar-SA.json  ar.json  de-DE.json  de.json  en-US.json  en.json  es-ES.json  es.json  fr-FR.json  fr.json  hi-IN.json  hi.json  it-IT.json  it.json  ja-JP.json  ja.json  ko-KR.json  ko.json  pt-BR.json  pt.json  ru-RU.json  ru.json  tr-TR.json  tr.json  uk-UA.json  uk.json  zh-CN.json  zh-TW.json  zh.json
cardinal/src/types/: ipc.ts  search.ts  sort.ts
cardinal/src/utils/: globalShortcuts.ts  openResultPath.ts  watchConfig.ts  watchRoot.ts
cardinal/src/utils/__tests__/: watchRoot.test.ts
doc/: SUMMARY.md  TODO.md  background-event-loop.md  fs-events-sdk.md  fs-icon.md  fswalk.md  ipc-commands.md  name-pool.md  project-overview.md  runtime-lifecycle.md  search-cache.md  search-cancellation.md  search-syntax.md  todo.md  ui-dataflow.md  virtual-list.md
doc/inner/: SUMMARY.md  fs-events-sdk.md  fs-icon.md  project-overview.md
doc/inner/harmonyos/: background-event-loop.md  harmonyos-default.md  ipc-commands.md  project-overview.md  runtime-lifecycle.md  ui-dataflow.md
file-tags/src/: lib.rs
fs-icon/: Cargo.toml
fs-icon/src/: lib.rs  linux.rs
fs-icon/tests/: linux_test.rs
fswalk/src/: lib.rs  type_and_size.rs
fswalk/tests/: deep_walk.rs
harmony-bindings/: Cargo.toml
harmony-bindings/src/: lib.rs
lsf/: Cargo.toml  README.md
lsf/src/: main.rs  persistent.rs  query.rs  search_cache.rs
migrations/2023-02-15-124931_init/: down.sql  up.sql
namepool/: Cargo.toml
namepool/src/: cache_line.rs  lib.rs
pathbytes/src/: lib.rs
query-segmentation/src/: lib.rs
search-cache/: Cargo.toml
search-cache/src/: cache.rs  file_nodes.rs  highlight.rs  lib.rs  name_index.rs  persistent.rs  prefetch_thread.rs  query.rs  query_preprocessor.rs  search_iterator.rs  segment.rs  slab.rs  slab_node.rs  tests_date_edge.rs  tests_extra.rs  tests_large.rs
search-cache/src/tests/: cache_flow.rs  date_edges.rs  date_keywords.rs  date_volume.rs  integration_filters.rs  query_logic.rs  size_filters.rs  traversal.rs  type_filters.rs
search-cache/tests/: boundary_limits_tests.rs  content_filter_comprehensive.rs  edge_cases_comprehensive.rs  fsevent_incremental_tests.rs  metadata_filters_tests.rs  parent_infolder_filters.rs  query_matrix_big.rs  search_with_options_multi_segments.rs  search_with_options_path_segments.rs  search_with_options_wildcards.rs  tag_filter.rs
search-cancel/src/: lib.rs
search-cancel/tests/: more.rs
src/: c.rs  lib.rs  processor.rs
src/database/: mod.rs
src/database/tests/: db.rs
src/fs_entry/: mod.rs  tests.rs
src/fsevent/: event_id.rs
was/: Cargo.toml
was/src/: main.rs
xtask/src/: main.rs
