[package]
name = "cardinal_qt_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
search-cache = { path = "../search-cache" }
search-cancel = { path = "../search-cancel" }
fs-icon = { path = "../fs-icon" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.102"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = "0.8.1"

[profile.dev]
split-debuginfo = "off"

[profile.release]
lto = true
