[package]
name = "fs-icon"
version = "0.1.0"
edition = "2024"


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSImage",
  "NSBitmapImageRep",
  "block2",
] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSURL",
  "NSError",
] }
objc2-quick-look-thumbnailing = { version = "0.3", features = [
  "QLThumbnailGenerator",
  "QLThumbnailRepresentation",
] }
objc2-image-io = { version = "0.3", features = ["CGImageSource"] }
objc2-core-foundation = { version = "0.3", features = [
  "CFURL",
  "CFDictionary",
  "CFNumber",
] }
block2 = "0.6.1"
crossbeam-channel = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"
mime_guess = "2.0"
glib = "0.20"
gio = "0.20"
gtk = { version = "0.18", features = ["v3_24"] }
