[package]
name    = "harmony-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
napi-ohos = { version = "1.0", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.0" }
search-cache = { path = "../search-cache" }
search-cancel = { path = "../search-cancel" }
fs-icon = { path = "../fs-icon" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
ohos-hilog-binding = "0.1.2"
ohos-fileuri-binding = "0.1.0"
anyhow = "1.0.102"

[build-dependencies]
napi-build-ohos = { version = "1.0" }

[profile.release]
lto = true
