[package]
name    = "harmony-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.0" }
search-cache = { path = "../search-cache" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

[build-dependencies]
napi-build-ohos = { version = "1.0" }

[profile.release]
lto = true